fixed the grid and spacing issues on the home page, working on the fonts next

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.profilepic {
-  width: 12%
-}
-
 .customNav {
   top: 25%;
   left: 3%;
@@ -11,8 +7,28 @@
   background-color: #D83F87;
 }
 
+.nav-item {
+  text-align: center;
+  font-size: 30px;
+}
 
+.profilepic {
+  position: relative;
+  width: 25%;
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.welcomeHome {
+  width: 25%;
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
 
 
 
